--- a/.github/workflows/deploy_ghpages.yml
+++ b/.github/workflows/deploy_ghpages.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pdoc3
-          pdoc --html --output-dir tmp --force src/wslpath_converter
+          pdoc --html --output-dir tmp --force src/wslPath
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
