--- a/.github/workflows/deploy_pypi.yml
+++ b/.github/workflows/deploy_pypi.yml
@@ -1,32 +1,27 @@
-name: Publish Python 🐍 distributions 📦 to PyPI
+name: Upload Python Package to PyPI
 
 on:
-  release:
-    types: [published]
+    release:
+        types: [published]
 
 jobs:
-  build-n-publish:
-    name: Build and publish Python 🐍 distributions 📦 to PyPI
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.x
-
-    - name: Install pip
-      run: python -m pip install --upgrade pip
-
-    - name: Install setuptools and wheel
-      run: python -m pip install setuptools wheel
-
-    - name: Build source and wheel distributions
-      run: python setup.py sdist bdist_wheel
-
-    - name: Publish distribution 📦 to PyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
+    deploy:
+        runs-on: ubuntu-latest
+        steps:
+            - uses: actions/checkout@v4
+            - name: Set up Python
+              uses: actions/setup-python@v5
+              with:
+                  python-version: "3.x"
+            - name: Install dependencies
+              run: |
+                  python -m pip install --upgrade pip
+                  pip install build
+            - name: Build package
+              run: python -m build
+            - name: Publish package
+              uses: pypa/gh-action-pypi-publish@release/v1
+              with:
+                  password: ${{ secrets.PYPI_API_TOKEN }}
+# Reference:
+# https://docs.github.com/en/actions/use-cases-and-examples/building-and-testing/building-and-testing-python#publishing-to-pypi
